Created a function that gets the selected movie ID and enters it into the the url api for searching IDs. That result then returns the an object with movie trailers. I then take the key in that object and create an iFrame. with the youtube url and key from the object as a the src.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
+@font-face {
+  src: url(Fonts/BebasNeue.otf);
+  font-family: 'Netflix';
+}
+
+body {
+  background-image: url(Images/ticket.jpg);
+  background-repeat: no-repeat;
+}
+
 header > h1 {
   text-align: center;
+  font-family: 'Netflix', sans-serif;
+  font-size: 6rem;
+  color: white;
 }
 
 .movie-form {
@@ -13,4 +26,21 @@ header > h1 {
 
 .movie-poster-border {
   border: 1px solid black;
+}
+
+aside > p {
+  color: white;
+}
+
+article > p {
+  color: white;
+}
+
+article > h4 {
+  color: white;
+}
+
+iframe {
+  width: 400px;
+  height: 250px;
 }
